--- a/src/aura/TaskList/TaskList.css
+++ b/src/aura/TaskList/TaskList.css
@@ -1,5 +1,5 @@
 .THIS {
-	background-color:#1589FF;
+	background-color:#1a1b1e;
     height:100;
     padding-bottom:10px;
     padding-top:30px;
@@ -7,9 +7,13 @@
 }
 
 .THIS .slds-box {
-    background-color:grey;
+    background-color:#ecebea;
 }
 
 .THIS .titleTask {
-    background-color:blue;
+    background-color:#ecebea;
+}
+
+.THIS .slds-grid {
+    padding-bottom:30px;
 }
