--- a/src/aura/TaskDetail/TaskDetail.cmp
+++ b/src/aura/TaskDetail/TaskDetail.cmp
@@ -1,14 +1,12 @@
 <aura:component controller="TaskDetailController" implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes,force:lightningQuickAction" access="global">
     <aura:attribute name="taskItem" type="HTask__c" />
     <aura:attribute name="habitPoints" type="Integer" />
-    
+
     <div aura:id="taskDetailId">
         <lightning:card variant="Narrow" class="np" title="{!v.taskItem.Name}" iconName="standard:account">
-            <!--
             <aura:set attribute="actions">
-                <lightning:buttonIcon iconName="utility:down" variant="border-filled" alternativeText="Show More"/>
+                <button class="slds-button slds-button_destructive" variant="border-filled" alternativeText="Delete" onclick="{!c.deleteTaskEx}">x</button>
             </aura:set>
-			-->
             <p class="slds-text-heading--medium slds-p-horizontal--small">
                 {!v.taskItem.Description__c}
             </p>
@@ -20,11 +18,11 @@
                     <button name="Complete Task" class="slds-button slds-button_neutral" onclick="{!c.completeTask}"> Complete </button>
                 </aura:if>
                 <aura:if isTrue="{!v.taskItem.Type__c == 'Habit'}">
-                    <button name="Positive" class="slds-button slds-button_success" onclick="{!c.habitDone}" data-value="positive"> + </button>
-                    <button name="Negative" class="slds-button slds-button_destructive" onclick="{!c.habitDone}" data-value="negative"> - </button>
+                    <button name="Positive" class="slds-button slds-button_success" onclick="{!c.habitDoneEx}" data-value="positive"> + </button>
+                    <button name="Negative" class="slds-button slds-button_destructive" onclick="{!c.habitDoneEx}" data-value="negative"> - </button>
                 </aura:if>
             </aura:set>
-            
+
         </lightning:card>
     </div>
 </aura:component>
